syntax = "proto3";
package commands;

service Get {
    rpc Get (StrKey) returns (StrValue);
}

service Add {
    rpc Add (StrKey, StrValue) returns (boolean);
}

message StrKey {
    string key = 1;
}

message StrValue {
    string value = 1;
}